--- a/application.yaml
+++ b/application.yaml
@@ -20,7 +20,7 @@ spec:
 
     automated:
       selfHeal: true
-      prune: true
+      prune: false
   
   notifications:
     - name: app-sync-succeeded
