--- a/application.yaml
+++ b/application.yaml
@@ -1,7 +1,7 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: myapp-argo-application1
+  name: myapp-argo-app
   namespace: argocd
   annotations: 
     notifications.argoproj.io/subscribe.on-sync-succeeded.gmail: kambleaditya2302@gmail.com
