--- a/application.yaml
+++ b/application.yaml
@@ -1,7 +1,7 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: myapp-argo-app
+  name: myapp-argo-app-notifications
   namespace: argocd
   annotations: 
     notifications.argoproj.io/subscribe.on-sync-succeeded.gmail: kambleaditya2302@gmail.com
@@ -12,9 +12,17 @@ spec:
     repoURL: https://github.com/LunaticGen/argocd-app-config.git
     targetRevision: HEAD
     path: dev
+
   destination: 
     server: https://kubernetes.default.svc
     namespace: myapp
+
+  notifications:
+    - name: app-sync-succeeded
+      enabled: true
+      template: app-sync-succeeded
+      events:
+        - ApplicationSynced
 
   syncPolicy:
     syncOptions:
